Fixes zen-1866.  Removed expand/collapse button and functionality.  Reviewed by Tim Sanders.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@58768 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -513,7 +513,7 @@ table.proptable {
 .xtb-text.livegridinfopanel {
   font-size: 10px;
   color: #373737;
-  font-weight: bold;
+  font-weight: bold !important;
   padding-right: 1em;
   padding-bottom: 3px;
   margin-top: 4px;
